salesforce_metadata/objects/ATC_Tax_Line__c/ATC_Tax_Line__c.object-meta.xml
<CustomObject>
    <description>Stores AFC tax line breakdown per Order. One record per tax component (Federal, State, County, City) per Order.</description>
    <label>ATC Tax Line</label>
    <nameField>
        <label>ATC Tax Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATC Tax Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>