salesforce_metadata/objects/ATC_Tax_Line__c/fields/Jurisdiction_City__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_City__c</fullName>
    <description>City name resolved from the AFC jurisdiction PCode.</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>