salesforce_metadata/objects/ATC_Tax_Line__c/fields/Jurisdiction_County__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_County__c</fullName>
    <description>County name resolved from the AFC jurisdiction PCode.</description>
    <label>County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>