salesforce_metadata/objects/ATC_Tax_Line__c/fields/Jurisdiction_PCode__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_PCode__c</fullName>
    <description>AFC reporting jurisdiction PCode. Use the /api/v2/afc/location/{pCode} endpoint to resolve to a state/county/city name.</description>
    <label>PCode</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>