salesforce_metadata/objects/ATC_Tax_Line__c/fields/Jurisdiction_State__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction_State__c</fullName>
    <description>State name resolved from the AFC jurisdiction PCode.</description>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>