salesforce_metadata/objects/ATC_Tax_Line__c/fields/Order_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Number__c</fullName>
    <description>The OrderItem LineNumber this tax component was calculated for.</description>
    <label>Order Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>